--- a/package.json
+++ b/package.json
@@ -10,13 +10,19 @@
     "@types/node": "^16.7.13",
     "@types/react": "^17.0.20",
     "@types/react-dom": "^17.0.9",
+    "@types/uuid": "^8.3.4",
+    "autoprefixer": "^10.4.4",
+    "date-fns": "^2.28.0",
     "eslint-config-prettier": "^8.5.0",
+    "postcss": "^8.4.12",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-router-dom": "6",
     "react-scripts": "5.0.0",
+    "tailwindcss": "^3.0.23",
     "typescript": "^4.4.2",
     "usehooks-ts": "^2.4.2",
+    "uuid": "^8.3.2",
     "web-vitals": "^2.1.0"
   },
   "scripts": {
