--- a/.eslintrc.yml
+++ b/.eslintrc.yml
@@ -5,6 +5,7 @@ extends:
   - eslint:recommended
   - plugin:react/recommended
   - plugin:@typescript-eslint/recommended
+  - plugin:react-hooks/recommended
   - prettier
 parser: '@typescript-eslint/parser'
 parserOptions:
@@ -16,13 +17,11 @@ plugins:
   - react
   - '@typescript-eslint'
 rules:
-  indent:
-    - warn
-    - 2
   quotes:
     - warn
     - single
   semi:
     - warn
     - never
+  # indent: off
   react/react-in-jsx-scope: off
