--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "@typescript-eslint/parser": "^5.15.0",
     "eslint": "^8.11.0",
     "eslint-plugin-react": "^7.29.4",
+    "eslint-plugin-react-hooks": "^4.3.0",
     "prettier": "2.6.0"
   },
   "packageManager": "yarn@3.2.0"
