--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@types/react-dom": "^17.0.9",
     "@types/uuid": "^8.3.4",
     "autoprefixer": "^10.4.4",
+    "clsx": "^1.1.1",
     "date-fns": "^2.28.0",
     "eslint-config-prettier": "^8.5.0",
     "postcss": "^8.4.12",
