--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "clsx": "^1.1.1",
     "date-fns": "^2.28.0",
     "eslint-config-prettier": "^8.5.0",
+    "phosphor-react": "^1.4.1",
     "postcss": "^8.4.12",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
